@@ -212,6 +212,11 @@ Version 1.6.7
 *******************************************************************************
 
 2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* upnp/src/genlib/miniserver/miniserver.c: Fix for IPV6 ULA/GUA issues.
+	
+	Patch submitted by Ronan Menard.
+
+2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* gena_subscribe(): Fix for IPV6 ULA/GUA issues.
 	
 	Patch submitted by Ronan Menard.
